@@ -1,16 +1,16 @@
 #!/usr/bin/env python
 
 import sys
-from psana import *
+import psana
 import Detector
 
 # psana -m EventKeys -n 5 exp=amob5114:run=403
 
-ds  = DataSource('exp=amob5114:run=403')
+ds  = psana.DataSource('exp=amob5114:run=403')
 evt = ds.events().next()
 env = ds.env()
 
-src = Source('DetInfo(Camp.0:pnCCD.0)')
+src = psana.Source('DetInfo(Camp.0:pnCCD.0)')
 
 det = Detector.DetectorAccess(src, 0) # , 0xffff)
 
